# tinyexpr

./: .gitignore  CMakeLists.txt  main.cpp  make_code  tinyexpr.c
lib_code/: tinyexpr.c  tinyexpr.h
